[tool.poetry]
name = "merchantizer"
version = "0.1.0"
description = ""
authors = ["pt-estimate <christopherwright@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
bertopic = "^0.16.1"
metaflow = "^2.11.10"
notebook = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
